Bug 263880 - Can't select a folder in search in mails dialog
Summary: Can't select a folder in search in mails dialog
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-21 15:53 UTC by Bjoern Ricks
Modified: 2011-02-17 14:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2011-01-21 15:53:33 UTC
Steps to reproduce:
1) Open mail
2) Open Actions flap
3) Select Mail Menu
4) Select Search for mails entry
5) Scroll down to "Seach in:"
6) Select "Only in Folder"
7) Try to open folder dialog

The folder dialog is expanded to the bottom to the screen border. It's neither visable nor selectable for the user.
Comment 1 Tobias Koenig 2011-01-24 17:08:52 UTC
SVN commit 1216764 by tokoe:

Open CollectionDialog when clicking on CollectionComboBox in MOBILE_UI mode

BUG: 263880


 M  +50 -0     collectioncombobox.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1216764
Comment 2 Ludwig Reiter 2011-02-17 14:16:11 UTC
In windows CE version 2011-02-16 the resources are selectable for the user.
 He can scroll and select if there are many items.
So verified.