Open CollectionDialog when clicking on CollectionComboBox in MOBILE_UI mode

BUG: 263880

svn path=/trunk/KDE/kdepimlibs/; revision=1216764